Alterações no JS

--- a/style.css
+++ b/style.css
@@ -556,13 +556,13 @@ a {
     left: 4px;
 }
 
-.js-cardapio {
+/* .js-cardapio {
     display: none;
 }
 
 .js-cardapio .ativo {
     display: block;
-}
+} */
 
 /************ RESPONSIVIDADE ************/ 
 
