Ajustes de tamanho para Mobile
Melhorando o tamanho das fontes na versão mobile !!!

--- a/style.css
+++ b/style.css
@@ -498,7 +498,7 @@ figure.logo {
     color: #fff;
     font-family: var(--fonte-titulos);
     font-size: 1.5rem;
-    padding-bottom: 5px;
+    padding-bottom: 1rem;
 }
 
 .horarios {
@@ -518,7 +518,7 @@ figure.logo {
     color: #fff;
     font-family: var(--fonte-titulos);
     font-size: 1.5rem;
-    padding-bottom: 5px;
+    padding-bottom: 1rem;
 }
 
 .horarios a {
@@ -653,10 +653,26 @@ figure.logo {
 
 @media(min-width:320px) and (max-width:768px) {
     .footer {
-        height: 1000px;
+        height: 1030px;
     }
     
     .footer-informacoes {
-        height: 1000px;
+        height: 1030px;
+    }
+
+    .endereco p, .horarios p {
+        font-size: 1.20rem;
+    }
+
+    .endereco h2, .horarios h2 {
+        font-size: 2rem;
+    }
+
+    .logo-rodape {
+        width: 200px;
+    }
+
+    .galeria-happy-hour img {
+        width: 250px;
     }
 }
