--- a/style.css
+++ b/style.css
@@ -663,6 +663,10 @@ figure.logo {
         grid-template-columns: 1fr 1fr 1fr;
         justify-content: center;
     }
+
+    /* .prato-feito {
+        font-size: 0.5rem;
+    } */
 }
 
 @media(min-width:425px) and (max-width: 768px) {
