--- a/style.css
+++ b/style.css
@@ -388,11 +388,10 @@ a {
 
 /************ SECTION GALERIA FOTOS ************/ 
 .galeria {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 1rem;
-    padding: 1.25rem;
-    justify-content: center;
+    display: flex;
+    /* gap: 2rem; */
+    padding: 2rem;
+    /* justify-content: center; */
 }
 
 #galeria {
@@ -401,13 +400,17 @@ a {
     background-repeat: no-repeat;
     background-size: cover;
     box-shadow: inset 0 0 10px 1px #fba802;
-    height: 700px;
+    height: 600px;
 }
 
-.img-galeria:hover {
-    box-shadow: 0 0 10px 1px #fff;
-    transition: all 0.6s;
+.galeria-album {
+    margin: 1rem;
 }
+
+/* .img-galeria:hover {
+    transform: perspective(800px) rotateY(0deg);
+    opacity: 1;
+} */
 
 /* .section-galeria {
     padding-bottom: 2rem;
@@ -676,7 +679,7 @@ figure.logo {
     }
 
     #galeria {
-        height: 2350px;
+        height: 400px;
     }
 
     .sobre-nos h1 {
@@ -725,7 +728,7 @@ figure.logo {
     }
 
     #galeria {
-        height: 800px;
+        height: 400px;
     }
 
     .sobre-nos h1 {
@@ -793,7 +796,7 @@ figure.logo {
 
 @media(min-width:500px) and (max-width:768px) {
     #galeria {
-        height: 1200px;
+        height: 400px;
     }
 }
 
